name = msg_enum.proto

package msg;

enum MapDataType {
	MAP_DATATYPE_USER = 0;
	MAP_DATATYPE_NPC = 1;
}

enum UserCharbaseState {
	CHARBASE_OK = 1;
	CHARBASE_FORBID = 2;
	CHARBASE_FORBID_NAME = 4;	
}

enum LoginRetCode {
	LOGIN_RETURN_UNKNOWN = 0;
	LOGIN_RETURN_VERSIONERROR = 1;
	LOGIN_RETURN_UUID = 2;	
	LOGIN_RETURN_DB = 3;
	LOGIN_RETURN_PASSWORDERROR = 4;
	LOGIN_RETURN_CHANGEPASSWORD =5;	
	LOGIN_RETURN_IDINUSE = 6;
	LOGIN_RETURN_IDINCLOSE = 7;
	LOGIN_RETURN_GATEWAYNOTAVAILABLE = 8;	
	LOGIN_RETURN_USERMAX = 9;
	LOGIN_RETURN_ACCOUNTEXIST = 10;
	LOGIN_RETURN_ACCOUNTSUCCESS = 11;	
	LOGIN_RETURN_CHARNAMEREPEAT = 12;
	LOGIN_RETURN_USERDATANOEXIST = 13;
	LOGIN_RETURN_USERNAMEREPEAT = 14;	
	LOGIN_RETURN_TIMEOUT = 15;
	LOGIN_RETURN_PAYFAILED = 16;
	LOGIN_RETURN_JPEG_PASSPORT = 17;	
	LOGIN_RETURN_LOCK = 18;
	LOGIN_RETURN_WAITACTIVE = 19;
	LOGIN_RETURN_NEWUSER_OLDZONE = 20;	
	LOGIN_RETURN_UUID_ERROR = 21;
	LOGIN_RETURN_USER_TOZONE = 22;
	LOGIN_RETURN_CHANGE_LOGIN =23;	
	LOGIN_RETURN_MATRIX_ERROR = 24;
	LOGIN_RETURN_MATRIX_NEED = 25;
	LOGIN_RETURN_MATRIX_LOCK = 26;	
	LOGIN_RETURN_MATRIX_DOWN = 27;
	LOGIN_RETURN_OLDUSER_NEWZONE = 28;
	LOGIN_RETURN_IMG_LOCK = 29;	
	LOGIN_RETURN_PASSPOD_PASSWORDERROR = 30;
	LOGIN_RETURN_PASSPOD_DOWN = 31;
	LOGIN_RETURN_BUSY = 32;	
	LOGIN_RETURN_FORBID = 33;
	LOGIN_RETURN_IMG_LOCK2 = 34;
	LOGIN_RETURN_MAINTAIN = 35;	
	LOGIN_RETURN_TDCODE_GEN_ERROR = 36;
	LOGIN_RETURN_TDCODE_DOWN = 37;
	LOGIN_RETURN_TOKEN_ERROR = 38;	
	LOGIN_RETURN_TOKEN_TOO_QUICK = 39;
	LOGIN_RETURN_TOKEN_TIMEOUT = 40;
	LOGIN_RETURN_SHOW_MSG =41;	
	LOGIN_RETURN_USERINLOGIN = 42;
	LOGIN_RETURN_CHARNAME_INVALID = 43;
	LOGIN_RETURN_GATEWAY_ID_INVALID = 44;	
	LOGIN_RETURN_CHARNAME_LEN_ERR = 45;
	LOGIN_RETURN_ROLEMAX = 46;
	LOGIN_RETURN_ROLE_FORBID = 47;	
}

enum Occupation {
	Occu_Dema = 1;
	Occu_Yaohu = 2;
}
enum QuestCrcRet {
	CrcRet_Same = 1;
	CrcRet_Diff = 2;
}

enum ZonedefType {
	ZONE_NONE = 0;
	ZONE_PK_SAFE = 1;
	ZONE_ABSOLUTE_SAFE = 2;	
	ZONE_RELIVE = 4;
	ZONE_NEWBIE = 8;
	ZONE_FOREIGN_RELIVE =16;	
	ZONE_GUILD = 32;
	ZONE_TRANSPORT =64;
	ZONE_ENTER_COPYMAP = 128;	
	ZONE_QUIT_COPYMAP = 256;
	ZONE_PVP_CAMP_RED = 512;
	ZONE_PVP_CAMP_BLUE = 1024;	
	ZONE_PVP_COMMIT_RED = 2048;
	ZONE_PVP_COMMIT_BLUE = 4096;
	ZONE_PVP_RELIVE_RED = 8192;	
	ZONE_PVP_RELIVE_BLUE = 16384;
}

enum ReliveType {
	RELIVE_NONE = 0;
	RELIVE_HOME = 1;
	RELIVE_ORIGIN = 2;	
	RELIVE_GUILD = 3;
	RELIVE_PKRAND = 4;
	RELIVE_COUNTRY =5;	
	RELIVE_NEAREST = 6;
	RELIVE_BATTLE = 7;
	RELIVE_SKILL = 8;	
}

enum PKMode {
	PKMode_None = 0;
	PKMode_Peace = 1;
	PKMode_Personal = 2;	
	PKMode_Guild = 3;
	PKMode_Team = 4;
	PKMode_Normal =5;	

}
enum QuestState {
	UNACCEPT = 0;
	DOING = 1;
	ACCEPTABLE = 99;	
	FINISHED = 100;
	FINISHED_SAVE = 101;
	FINISHED_NOTSAVE =102;	
}

enum RefreshType {
	RefreshType_None = 0;
	RefreshType_DaxSix = 1;
	RefreshType_MondaySix = 2;	
	RefreshType_MonthFirstSix = 3;
	RefreshType_DayMany = 4;
}
enum MATCHFIGHT {
	FIGHT_NONE = 0;
	FIGHT_RANKPK = 1;
	FIGHT_TILLDIE = 2;	
	FIGHT_RANDOM = 3;
	FIGHT_MAX = 4;
}

enum StageType {
	None_Stage = 0;
	Match = 1;
	Login = 2;	
	Prepare = 3;
	PreFight = 4;
	CountDown =5;	
	Fight = 6;
	Speedup = 7;
	Finish = 8;	
	Max_Stage = 9;
}
enum MATCHFIGHTTEAMMODE {
	SOLO = 1;
	TEAM = 2;	
	BOTH = 3;
}
enum MATCHFIGHTTEAM {
	BLUE = 1;
	RED = 2;	
}
enum FIGHTRESULT {
	WIN = 1;
	LOSE = 2;	
}

enum RISESTAR {
	RISESTAR_SUCCESS = 1;
	RISESTAR_THISIDERR = 2;	
	RISESTAR_BASEIDERR = 3;
	RISESTAR_MAXSTARERR = 4;
	RISESTAR_LOCKEDERR = 5;	
}

enum SEX {
	NONE = 1;
	MALE = 2;
	FEMALE = 3;	
}

enum SELLTYPE {
	SELLNONE = 0;
	OBJECT = 1;
	HERO = 2;	
}

enum CreateRoleLookType {
	CREATE_ROLE_LOOK_TYPE_HAIR_COLOR = 1;
	CREATE_ROLE_LOOK_TYPE_HAIR_STYLE = 2;	
	CREATE_ROLE_LOOK_TYPE_FACE_STYLE = 3;
	CREATE_ROLE_LOOK_TYPE_ANTENNA = 4;
}

enum AnswerShareQuestRetCode {
	ANSWER_SHARE_QUEST_RET_CODE_SUCCESS = 0;
	ANSWER_SHARE_QUEST_RET_CODE_NOT_EXIST = 1;
	ANSWER_SHARE_QUEST_RET_CODE_LEVEL = 2;	
	ANSWER_SHARE_QUEST_RET_CODE_PREQUEST = 3;
	ANSWER_SHARE_QUEST_RET_CODE_DOING = 4;
	ANSWER_SHARE_QUEST_RET_CODE_DAILY_QUEST =5;	
	ANSWER_SHARE_QUEST_RET_CODE_OTHER = 6;
}

enum ERechargeReturnCode {
	ERECHARGE_RETURN_CODE_SUCCESS = 0;
	ERECHARGE_RETURN_CODE_SERVICE_LOST = 1;
	ERECHARGE_RETURN_CODE_ACCOUNT_NOT_FOUND = 2;	
	ERECHARGE_RETURN_CODE_NOT_ENOUGH = 3;
	ERECHARGE_RETURN_CODE_CARD_NOT_FOUND = 4;
	ERECHARGE_RETURN_CODE_CARD_CAN_NOT_USER =5;	
	ERECHARGE_RETURN_CODE_CARD_CAN_USE_MULTY = 6;
	ERECHARGE_RETURN_CODE_CARD_ERROR_NUMBER = 7;
	ERECHARGE_RETURN_CODE_CARD_ERROR_PSWD = 8;	
	ERECHARGE_RETURN_CODE_DATABASE_ERROR = 9;
	ERECHARGE_RETURN_CODE_IN_PROCESSING = 10;	
	ERECHARGE_RETURN_CODE_UNKNOWN_ERROR = 11;
}



message EntryIDType {
    optional uint64 id = 1;
    optional uint32 type = 2;
}

message Position {
    optional float x = 1;
    optional float y = 2;
}